--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
 </head>
 
 <body class="home-page">
-    <div class="online-counselling">
+    <!-- <div class="online-counselling">
         <a href="https://forms.gle/A2PqCFi7486vxwwi6" target="_blank">Register for online
             counselling</a>
-    </div>
+    </div> -->
     <header>
         <div class="container">
             <nav>
@@ -62,6 +62,7 @@
                         <li class="mobile-logo"><a href="index.html"><img src="images/logo.png" alt=""
                                     class="img-fluid logo"></a></li>
                         <li class="nav-item"><a href="about-us.html" class="nav-link">about us</a></li>
+                        <li class="nav-item"><a href="why-lumina.html" class="nav-link">why lumina Terra?</a></li>
                         <!-- <li class="nav-item"><a href="pricing.html" class="nav-link">pricing</a></li> -->
                         <li class="nav-item"><a href="program.html" class="nav-link">program</a></li>
                         <!-- <li class="nav-item"><a href="instructor.html" class="nav-link">instructor</a></li> -->
@@ -72,22 +73,25 @@
         </div>
     </header>
     <main>
-        <section class="hero-section p-bottom">
+        <section class="hero-section">
             <div class="container">
                 <div class="hero-grid">
                     <div class="hero-grid-item">
                         <div class="content-wrapper">
                             <h1>LUMINA <span>TERRA</span></h1>
-                            <h6>SCHOOL OF NATIONS</h6>
-                            <h3>Enrolling 2 to 10 Year Olds</h3>
+                            <h2>school of nations</h2>
                             <h4>A future IB/CBSE K-12 School</h4>
+                            <a href="contact-us.html">BOOK ONLINE COUNSELLING</a>
                         </div>
                     </div>
-                    <div class="hero-grid-item">
-                        <div class="img-wrapper">
-                            <img src="images/hero-01.jpg" alt="" class="img-fluid">
-                            <img src="images/boudless-01.png" alt="" class="boundless-future">
-                        </div>
+                </div>
+            </div>
+        </section>
+        <section class="leaf-hold p-top p-bottom">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-8 mx-auto">
+                        <h2 class="heading-primary text-center">“Every leaf holds a lesson, every breeze tells a story—our classrooms are alive.”</h2>
                     </div>
                 </div>
             </div>
@@ -111,28 +115,25 @@
                 </div>
             </div>
         </section>
+        <section class="leaf-hold p-top p-bottom">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-8 mx-auto">
+                        <h2 class="heading-primary text-center">“We don’t shape children—we shape spaces where they can shape themselves.”</h2>
+                    </div>
+                </div>
+            </div>
+        </section>
         <section class="sustainable-area p-top p-bottom">
             <div class="container">
                 <div class="sustaible-grid">
                     <div class="sustaible-grid-item">
-                        <h2 class="heading-primary">Shaping Responsible Global Citizens at Lumina Terra</h2>
+                        <h2 class="heading-primary">The World’s Most Outstanding Sustainable School</h2>
                         <div class="border-bottom"></div>
                         <div class="content-para">
-                            <p>At Lumina Terra School of Nations, we provide a transformative educational journey from
-                                Playgroup to Grade 5 (K12 in the near future), blending personalized attention,
-                                sustainability, and innovative pedagogy to empower students as responsible global
-                                citizens.
+                            <p>At Lumina Terra, we redefine education as a transformative journey where sustainability, innovation, creativity, & leadership converge. Our mission is to prepare students to become global leaders & changemakers of tomorrow. Derived from Latin, Terra means Earth or land, symbolizing sustainability & a profound connection to the natural world. Nova Terra represents a “New Earth,” blending environmental stewardship with educational innovation to inspire meaningful transformation.
                             </p>
-                            <ul>
-                                <li><strong>Nurturing Leaders of Tomorrow:</strong> We cultivate leadership, creativity,
-                                    and responsibility through an innovative education.
-                                </li>
-                                <li><strong>Learning with Purpose:</strong> Our globally designed sustainable campus
-                                    inspires students to develop forward-thinking practices and sustainability.</li>
-                                <li><strong>Preparing Changemakers:</strong> Holistic growth ensures each student is
-                                    equipped with essential attitudes, skills and values to make meaningful
-                                    contributions to society.</li>
-                            </ul>
+                            <div class="btn-wrapper"><a href="about-us.html" class="global-btn-one">about us</a></div>
                         </div>
                     </div>
                     <div class="sustaible-grid-item">
@@ -141,9 +142,18 @@
                 </div>
             </div>
         </section>
+        <section class="leaf-hold p-top p-bottom">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-9 mx-auto">
+                        <h2 class="heading-primary text-center">“At Lumina Terra, questions matter more than answers—and wonder is the curriculum.”</h2>
+                    </div>
+                </div>
+            </div>
+        </section>
         <section class="signature-strength p-top p-bottom">
             <div class="container">
-                <h2 class="heading-primary">Luminous Foundations</h2>
+                <h2 class="heading-primary">Signature Strengths</h2>
                 <div class="border-one"></div>
                 <div class="signature-grid">
                     <div class="signature-grid-item">
@@ -225,163 +235,61 @@
                 </div>
             </div>
         </section>
-        <section class="educational-visioners p-top p-bottom">
+        <section class="leaf-hold p-top p-bottom">
             <div class="container">
-                <h2 class="heading-primary">International Committee</h2>
-                <div class="border-one"></div>
-                <div class="educational-grid">
-                    <div class="educational-grid-item">
-                        <div class="img-wrapper">
-                            <img src="images/visionaries/education-03.jpg" alt="" class="img-fluid">
-                        </div>
-                        <h4 class="heading-tertiary"><a href="international-committee/Inger-Mette-Stenseth.html" target="_blank">Inger Mette Stenseth</a>
-                        </h4>
-                        <div class="content-para">
-                            <p>Norwegian sustainability advocate and educator</p>
-                        </div>
-                        <div class="text-center">
-                            <a href="international-committee/Inger-Mette-Stenseth.html" target="_blank">read more</a>
-                        </div>
-                    </div>
-                    <div class="educational-grid-item">
-                        <div class="img-wrapper">
-                            <img src="images/visionaries/education-04.jpg" alt="" class="img-fluid">
-                        </div>
-                         <h4 class="heading-tertiary"><a href="international-committee/manish-jain.html" target="_blank">Manish Jain</a></h4>
-                         <div class="content-para">
-                            <p>Founder Shikshantar Andolan and Swaraj University</p>
-                        </div>
-                        <div class="text-center">
-                            <a href="international-committee/manish-jain.html" target="_blank">read more</a>
-                        </div>
-                    </div>
-                    <div class="educational-grid-item">
-                        <div class="img-wrapper">
-                            <img src="images/visionaries/education-05.jpg" alt="" class="img-fluid">
-                        </div>
-                        <h4 class="heading-tertiary"><a href="international-committee/Vijay-Sinha.html" target="_blank">Vijay Sinha</a></h4>
-                        <div class="content-para">
-                            <p>Founder Skyline Architectural Consultants</p>
-                        </div>
-                        <div class="text-center">
-                            <a href="international-committee/Vijay-Sinha.html" target="_blank">read more</a>
-                        </div>
-                    </div>
-                    <div class="educational-grid-item">
-                        <div class="img-wrapper">
-                            <img src="images/visionaries/education-06.jpg" alt="" class="img-fluid">
-                        </div>
-                        <h4 class="heading-tertiary"><a href="international-committee/Jon-Corippo.html" target="_blank">Jon Corippo</a></h4>
-                        <div class="content-para">
-                            <p>Award-winning educator and EdTech innovator</p>
-                        </div>
-                        <div class="text-center">
-                            <a href="international-committee/Jon-Corippo.html" target="_blank">read more</a>
-                        </div>
-                    </div>
-                    <div class="educational-grid-item">
-                        <div class="img-wrapper">
-                            <img src="images/visionaries/education-08.jpg" alt="" class="img-fluid">
-                        </div>
-                        <h4 class="heading-tertiary"><a href="international-committee/Irmeli-Halinen.html" target="_blank">Irmeli Halinen</a></h4>
-                        <div class="content-para">
-                            <p>Former Head of Curriculum Development at the Finnish National Agency for Education</p>
-                        </div>
-                        <div class="text-center">
-                            <a href="international-committee/Irmeli-Halinen.html" target="_blank">read more</a>
-                        </div>
-                    </div>
-                    <div class="educational-grid-item">
-                        <div class="img-wrapper">
-                            <img src="images/visionaries/education-09.jpg" alt="" class="img-fluid">
-                        </div>
-                        <h4 class="heading-tertiary"><a href="international-committee/Aicha-Bah-Diallo.html" target="_blank">Aicha Bah Diallo</a></h4>
-                        <div class="content-para">
-                            <p>Former Minister of Education in Guinea</p>
-                        </div>
-                        <div class="text-center">
-                            <a href="international-committee/Aicha-Bah-Diallo.html" target="_blank">read more</a>
-                        </div>
-                    </div>
-                    <div class="educational-grid-item">
-                        <div class="img-wrapper">
-                            <img src="images/visionaries/education-10.jpg" alt="" class="img-fluid">
-                        </div>
-                        <h4 class="heading-tertiary"><a href="international-committee/Rickie-Dhillon.html" target="_blank">Rickie Dhillon</a></h4>
-                        <div class="content-para">
-                            <p>Superintendent/CEO of Kepler Neighborhood School in Fresno, California</p>
-                        </div>
-                        <div class="text-center">
-                            <a href="international-committee/Rickie-Dhillon.html" target="_blank">read more</a>
-                        </div>
-                    </div>
-                    <div class="educational-grid-item">
-                        <div class="img-wrapper">
-                            <img src="images/visionaries/education-11.jpg" alt="" class="img-fluid">
-                        </div>
-                        <h4 class="heading-tertiary"><a href="international-committee/Olivier-Ledoux.html" target="_blank">Olivier Ledoux</a></h4>
-                        <div class="content-para">
-                            <p>French sculptor celebrated for his participatory approach to art</p>
-                        </div>
-                        <div class="text-center">
-                            <a href="international-committee/Olivier-Ledoux.html" target="_blank">read more</a>
-                        </div>
-                    </div>
-                    <div class="educational-grid-item">
-                        <div class="img-wrapper">
-                            <img src="images/visionaries/education-01.jpg" alt="" class="img-fluid">
-                        </div>
-                        <h4 class="heading-tertiary"><a href="international-committee/Dr-Bharti-Gandhi.html" target="_blank">Dr. Bharti Gandhi</a></h4>
-                        <div class="content-para">
-                            <p>Co-Founder, City Montessori School (CMS), Child Psychologist</p>
-                        </div>
-                        <div class="text-center">
-                            <a href="international-committee/Dr-Bharti-Gandhi.html" target="_blank">read more</a>
-                        </div>
-                    </div>
-                    <div class="educational-grid-item">
-                        <div class="img-wrapper">
-                            <img src="images/visionaries/education-02.jpg" alt="" class="img-fluid">
-                        </div>
-                        <h4 class="heading-tertiary"><a href="international-committee/Dr-Sunita-Gandhi.html" target="_blank">Dr. Sunita Gandhi</a></h4>
-                        <div class="content-para">
-                            <p>Educator, Researcher, Author, and Innovator</p>
-                        </div>
-                        <div class="text-center">
-                            <a href="international-committee/Dr-Sunita-Gandhi.html" target="_blank">read more</a>
-                        </div>
-                    </div>
-                    <div class="educational-grid-item">
-                        <div class="img-wrapper">
-                            <img src="images/visionaries/education-13.jpg" alt="" class="img-fluid">
-                        </div>
-                        <h4 class="heading-tertiary"><a href="international-committee/Michaël-Feneux.html" target="_blank">Michaël Feneux</a></h4>
-                        <div class="content-para">
-                            <p>French artist, builder, and innovator specializing in zome construction</p>
-                        </div>
-                        <div class="text-center">
-                            <a href="international-committee/Michaël-Feneux.html" target="_blank">read more</a>
-                        </div>
-                    </div>
-                    <div class="educational-grid-item">
-                        <div class="img-wrapper">
-                            <img src="images/visionaries/education-12.jpg" alt="" class="img-fluid">
-                        </div>
-                        <h4 class="heading-tertiary"><a href="international-committee/Pirjo-Koivula.html" target="_blank">Pirjo Koivula</a></h4>
-                        <div class="content-para">
-                            <p>Finnish educator and policymaker known for her contributions to inclusive education and early intervention reforms</p>
-                        </div>
-                        <div class="text-center">
-                            <a href="international-committee/Pirjo-Koivula.html" target="_blank">read more</a>
-                        </div>
+                <div class="row">
+                    <div class="col-md-8 mx-auto">
+                        <h2 class="heading-primary text-center">“Connection before correction. We raise children who feel seen, heard, and valued.”</h2>
                     </div>
                 </div>
-                <div class="btn-wrapper text-center">
-                    <a href="international-committee.html" class="globalbtn-one">expand now</a>
+            </div>
+        </section>
+        <section class="sus-campus">
+            <div class="container">
+                <div class="campus-grid">
+                    <div class="content-wrapper">
+                        <h2 class="heading-primary">A truly 
+                            sustainable 
+                            campus</h2>
+                        <div class="space-one"></div>
+                        <p>A sustainable school, crafted by global experts and architects, backed by evidence, shaping the future.</p>
+                    </div>
                 </div>
             </div>
         </section>
     </main>
+    <footer class="p-top p-bottom">
+        <div class="container">
+            <div class="footer-logo">
+                <img src="images/logo.png" alt="" class="img-flui">
+            </div>
+            <div class="footer-text">
+                <p>At Lumina Terra, we believe learning should feel like it belongs to the child. Set in nature-rich spaces and shaped by curiosity, our approach nurtures thinkers, doers, and quiet observers alike. It’s education that grows with them — relevant, real, and rooted.</p>
+            </div>
+            <div class="footer-links">
+                <ul>
+                    <li><a href="contact-us.html">Admissions</a></li>
+                    <li><a href="contact-us.html">Contact</a></li>
+                </ul>
+            </div>
+            <div class="footer-social">
+                 <ul>
+                    <!-- <li><a href="" target="_blank" style="--fclr:#557dbc;">
+                        <i class="fa-brands fa-facebook-f"></i>
+                    </a></li> -->
+                    <li><a href="https://wa.me/+34 653013859" target="_blank" style="--fclr:#29a71a;">
+                        <i class="fa-brands fa-whatsapp"></i>
+                    </a></li>
+                    <!-- <li><a href="" target="_blank" style="--fclr:#03a9f4;">
+                        <i class="fa-brands fa-twitter"></i>
+                    </a></li>
+                    <li><a href="" target="_blank" style="--fclr:radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%,#d6249f 60%,#285AEB 90%);">
+                        <i class="fa-brands fa-instagram"></i>
+                    </a></li> -->
+                </ul>
+            </div>
+        </div>
+    </footer>
 
     <script src="vendor/js/jquery.min.js"></script>
     <script src="vendor/js/jquery-ui.min.js"></script>
