--- a/program.html
+++ b/program.html
@@ -13,10 +13,10 @@
 </head>
 
 <body>
-    <div class="online-counselling">
+    <!-- <div class="online-counselling">
         <a href="https://forms.gle/A2PqCFi7486vxwwi6" target="_blank">Register for online
             counselling</a>
-    </div>
+    </div> -->
     <header>
         <div class="container">
             <nav>
@@ -35,6 +35,7 @@
                         <li class="mobile-logo"><a href="index.html"><img src="images/logo.png" alt=""
                                     class="img-fluid logo"></a></li>
                         <li class="nav-item"><a href="about-us.html" class="nav-link">about us</a></li>
+                        <li class="nav-item"><a href="why-lumina.html" class="nav-link">why lumina Terra?</a></li>
                         <!-- <li class="nav-item"><a href="pricing.html" class="nav-link">pricing</a></li> -->
                         <li class="nav-item"><a href="program.html" class="nav-link">program</a></li>
                         <!-- <li class="nav-item"><a href="instructor.html" class="nav-link">instructor</a></li> -->
@@ -54,44 +55,44 @@
                 <h2 class="heading-primary">CBSE/IB Board</h2>
                 <div class="border-one"></div>
                 <div class="row">
-                    <div class="col-md-3">
+                    <div class="col-md-6">
                         <div class="card">
                             <div class="img-wrapper"><img src="images/foundational-01.jpg" alt="" class="img-fluid"></div>
                             <div class="card-content">
-                                <h4 class="heading-four">Foundational </h4>
+                                <h4 class="heading-four">Foundational<br> Years</h4>
                                 <div class="content-para">
                                     <p>Playgroup to Grade 2</p>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-6">
                         <div class="card">
                             <div class="img-wrapper"><img src="images/primary-01.jpg" alt="" class="img-fluid"></div>
                             <div class="card-content">
-                                <h4 class="heading-four">Primary</h4>
+                                <h4 class="heading-four">Primary<br> Years</h4>
                                 <div class="content-para">
                                     <p>Grade 3 to 5</p>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-6">
                         <div class="card">
                             <div class="img-wrapper"><img src="images/junior-01.jpg" alt="" class="img-fluid"></div>
                             <div class="card-content">
-                                <h4 class="heading-four">Junior</h4>
+                                <h4 class="heading-four">Middle<br> Years</h4>
                                 <div class="content-para">
-                                    <p>Primary Grade 6 to 8</p>
+                                    <p>Grade 6 to 8</p>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-6">
                         <div class="card">
                             <div class="img-wrapper"><img src="images/senior-01.jpg" alt="" class="img-fluid"></div>
                             <div class="card-content">
-                                <h4 class="heading-four">Senior</h4>
+                                <h4 class="heading-four">Senior<br> Years</h4>
                                 <div class="content-para">
                                     <p>Grade 9 t0 12</p>
                                 </div>
@@ -312,6 +313,38 @@
         </div>
     </main>
 
+    <footer class="p-top p-bottom">
+        <div class="container">
+            <div class="footer-logo">
+                <img src="images/logo.png" alt="" class="img-flui">
+            </div>
+            <div class="footer-text">
+                <p>At Lumina Terra, we believe learning should feel like it belongs to the child. Set in nature-rich spaces and shaped by curiosity, our approach nurtures thinkers, doers, and quiet observers alike. It’s education that grows with them — relevant, real, and rooted.</p>
+            </div>
+            <div class="footer-links">
+                <ul>
+                    <li><a href="contact-us.html">Admissions</a></li>
+                    <li><a href="contact-us.html">Contact</a></li>
+                </ul>
+            </div>
+            <div class="footer-social">
+                 <ul>
+                    <!-- <li><a href="" target="_blank" style="--fclr:#557dbc;">
+                        <i class="fa-brands fa-facebook-f"></i>
+                    </a></li> -->
+                    <li><a href="https://wa.me/+34 653013859" target="_blank" style="--fclr:#29a71a;">
+                        <i class="fa-brands fa-whatsapp"></i>
+                    </a></li>
+                    <!-- <li><a href="" target="_blank" style="--fclr:#03a9f4;">
+                        <i class="fa-brands fa-twitter"></i>
+                    </a></li>
+                    <li><a href="" target="_blank" style="--fclr:radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%,#d6249f 60%,#285AEB 90%);">
+                        <i class="fa-brands fa-instagram"></i>
+                    </a></li> -->
+                </ul>
+            </div>
+        </div>
+    </footer>
     <script src="vendor/js/jquery.min.js"></script>
     <script src="vendor/js/jquery-ui.min.js"></script>
     <script src="vendor/js/bootstrap.min.js"></script>
