--- a/contact-us.html
+++ b/contact-us.html
@@ -31,6 +31,7 @@
                     <ul class="nav-list">
                         <li class="mobile-logo"><a href="index.html"><img src="images/logo.png" alt="" class="img-fluid logo"></a></li>
                         <li class="nav-item"><a href="about-us.html" class="nav-link">about us</a></li>
+                        <li class="nav-item"><a href="why-lumina.html" class="nav-link">why lumina Terra?</a></li>
                         <!-- <li class="nav-item"><a href="pricing.html" class="nav-link">pricing</a></li> -->
                         <li class="nav-item"><a href="program.html" class="nav-link">program</a></li>
                         <!-- <li class="nav-item"><a href="instructor.html" class="nav-link">instructor</a></li> -->
@@ -64,8 +65,7 @@
 
                                     <span class="contact-venue__list-icon">
                                         <i aria-hidden="true" class="fas fa-phone"></i> </span>
-                                    <span class="contact-venue__list-text"><a href="tel:+91-740%20840%206000">+91-740
-                                            840 5000</a></span>
+                                    <span class="contact-venue__list-text"><a href="tel:+917408405000">+91-740 840 5000</a></span>
                                 </li>
                                 <li class="contact-venue__list-item">
                                     <span class="contact-venue__list-icon">
@@ -80,6 +80,39 @@
             </div>
         </div>
     </main>
+
+    <footer class="p-top p-bottom m-top">
+        <div class="container">
+            <div class="footer-logo">
+                <img src="images/logo.png" alt="" class="img-flui">
+            </div>
+            <div class="footer-text">
+                <p>At Lumina Terra, we believe learning should feel like it belongs to the child. Set in nature-rich spaces and shaped by curiosity, our approach nurtures thinkers, doers, and quiet observers alike. It’s education that grows with them — relevant, real, and rooted.</p>
+            </div>
+            <div class="footer-links">
+                <ul>
+                    <li><a href="contact-us.html">Admissions</a></li>
+                    <li><a href="contact-us.html">Contact</a></li>
+                </ul>
+            </div>
+            <div class="footer-social">
+                <ul>
+                    <!-- <li><a href="" target="_blank" style="--fclr:#557dbc;">
+                        <i class="fa-brands fa-facebook-f"></i>
+                    </a></li> -->
+                    <li><a href="https://wa.me/+34 653013859" target="_blank" style="--fclr:#29a71a;">
+                        <i class="fa-brands fa-whatsapp"></i>
+                    </a></li>
+                    <!-- <li><a href="" target="_blank" style="--fclr:#03a9f4;">
+                        <i class="fa-brands fa-twitter"></i>
+                    </a></li>
+                    <li><a href="" target="_blank" style="--fclr:radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%,#d6249f 60%,#285AEB 90%);">
+                        <i class="fa-brands fa-instagram"></i>
+                    </a></li> -->
+                </ul>
+            </div>
+        </div>
+    </footer>
 
     <script src="vendor/js/jquery.min.js"></script>
     <script src="vendor/js/jquery-ui.min.js"></script>
